--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,18 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint", "@angular-eslint"],
   "rules": {
     "prefer-const": "error",
     "semi": "error",
-    "unused-imports/no-unused-imports": "warn",
+    "unused-imports/no-unused-imports": "off",
     "padding-line-between-statements": [
       "error",
       {
