--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@capacitor-community/barcode-scanner": "^2.1.1",
     "@capacitor/android": "^3.4.3",
     "@capacitor/angular": "^2.0.3",
     "@capacitor/core": "latest",
     "@capacitor/dialog": "^1.0.7",
+    "@capacitor/storage": "^1.2.5",
+    "jsbarcode": "^3.11.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
