--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -8,5 +8,8 @@ project(':capacitor-community-barcode-scanner').projectDir = new File('../node_m
 include ':capacitor-dialog'
 project(':capacitor-dialog').projectDir = new File('../node_modules/@capacitor/dialog/android')
 
+include ':capacitor-geolocation'
+project(':capacitor-geolocation').projectDir = new File('../node_modules/@capacitor/geolocation/android')
+
 include ':capacitor-storage'
 project(':capacitor-storage').projectDir = new File('../node_modules/@capacitor/storage/android')
