--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -11,6 +11,7 @@ apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
     implementation project(':capacitor-community-barcode-scanner')
     implementation project(':capacitor-dialog')
+    implementation project(':capacitor-geolocation')
     implementation project(':capacitor-storage')
 
 }
