--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/angular": "^2.0.3",
     "@capacitor/core": "latest",
     "@capacitor/dialog": "^1.0.7",
+    "@capacitor/geolocation": "^1.3.1",
     "@capacitor/storage": "^1.2.5",
     "jsbarcode": "^3.11.5",
     "rxjs": "~7.5.0",
