--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@capacitor-community/barcode-scanner": "^2.1.1",
     "@capacitor/android": "^3.4.3",
     "@capacitor/angular": "^2.0.3",
-    "@capacitor/core": "latest",
+    "@capacitor/core": "^3.5.1",
     "@capacitor/dialog": "^1.0.7",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/storage": "^1.2.5",
@@ -42,7 +42,7 @@
     "@angular-eslint/template-parser": "13.2.0",
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
-    "@capacitor/cli": "latest",
+    "@capacitor/cli": "^3.5.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
